2000-06-02  Mark Kettenis  <kettenis@gnu.org>

	* alphabsd-nat.c (supply_fpregset): Substract FP0_REGNUM from
	register number when used as index into fpr_regs array.

Tue May 30 13:31:57 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* defs.h (TARGET_FLOAT_FORMAT, TARGET_DOUBLE_FORMAT,
 	TARGET_LONG_DOUBLE_FORMAT): Delete.

	* gdbarch.sh: Add support for parameterized expressions.
 	(TARGET_FLOAT_FORMAT, TARGET_DOUBLE_FORMAT,
 	TARGET_LONG_DOUBLE_FORMAT): Add.  Include "floatformat.h".
	* gdbarch.h, gdbarch.c: Regenerate.
	
	* arch-utils.c (default_single_format, default_double_format,
 	default_long_double_format): New functions. Include
 	"floatformat.h"
	* arch-utils.h: Declare.
	
	* d10v-tdep.c (d10v_gdbarch_init): Set floating point format.
  	Note that long double is 64 bit, the rest are 32 bit.  Include
 	"floatformat.h".

2000-06-02  Mark Kettenis  <kettenis@gnu.org>

	* config/alpha/nm-fbsd.h (CANNOT_STEP_BREAKPOINT): Define.

2000-06-01  Michael Snyder  <msnyder@seadog.cygnus.com>

	* sol-thread.c (rw_common): Circumstances (eg. a bug in Sun's 
	thread_db library) may cause this function to be called with an
	illegal address, in which case procfs_to_xfer_memory will 
	return zero.  Return an error code instead of looping forever.

Thu Jun  1 20:05:26 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* TODO: More suggestions added.

2000-05-31  J.T. Conklin  <jtc@redback.com>

	* configure.host: Add patterns for i[3456]86-*-netbsdaout*
	and i[3456]86-*-netbsdelf*.
	* config/i386/nm-nbsdelf.h: New file.
	* config/i386/nbsdelf.mh: New file.

	* config/i386/nm-nbsd.h: change include of nm-nbsd.h to 
	the more explicit config/nm-nbsd.h.
	* config/i386/tm-nbsd.h: change include of tm-i386bsd.h to
 	tm-i386.h.
	(SIGTRAMP_START, SIGTRAMP_END, SIGCONTEXT_PC_OFFSET): Define.

2000-06-01  Mark Kettenis  <kettenis@gnu.org>

	* NEWS: Mention FreeBSD/Alpha and FreeBSD/i386 3.x and up as new
	native configurations.

	* i386bsd-nat.c: Include "gregset.h".