@@ -1,0 +1,5 @@
+# Target: Intel 386 running NetBSD
+TDEPFILES= i386-tdep.o i387-tdep.o
+TM_FILE= tm-nbsdelf.h
+
+GDBSERVER_DEPFILES= low-nbsd.o
